--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Strongly typed parser for typescript",
   "main": "index.js",
   "scripts": {
-    "tsc":"tsc",    
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "devDependencies": {
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "^4.4.3"
   }
 }
